chore: add integration tests + switch to testcontainers + separate tests runs